# hello-rust

./: .gitignore  .project  Cargo.toml  README-amd-ryzen-5-4500u.md  README-c.sh  README-dart.sh  README-go.sh  README-graalpy.sh  README-i3-7100U.md  README-i5-12500H.md  README-i5-6300U.md  README-i7-1360P.md  README-java.sh  README-js.sh  README-julia.sh  README-jython.sh  README-mojo.sh  README-nim.sh  README-pas.sh  README-python-0.sh  README-python-cython.sh  README-python-graalpy.sh  README-python-jython.sh  README-python-mypyc.sh  README-python-pypy.sh  README-python.sh  README-rust.sh  README-v.sh  README-vala.sh  README-zig.sh  README.md  README.sh  all.sh  build.gradle  compile-pas.sh  cpu.sh  test.sh
src/: Main.java  MainFast.java  StringToDouble.java  go.mod  lib.rs  lifetime.rs  main  main-builder.v  main-fast-dp.cpp  main-fast_dp.c  main-inline.py  main-join.pl  main-replace.rs  main-u.mojo  main-unsafe.go  main-unsafe.rs  main.c  main.dart  main.for  main.go  main.jl  main.jpy  main.js  main.mojo  main.pas  main.pl  main.py  main.rs  main.v  main.vala  main_builtin_gen.py  main_inline.py  mainzig.zig  project1.lps  tests.rs  unit1.lfm  unit1.pas
src/backup/: project1.lps
src/main/cython/: build-cython.sh  gen.py  gen.pyx  main.py  pyproject.toml  setup.py
src/main/cython-compatible/: .gitignore  build-cython.sh  pyproject.toml  setup.py
src/main/java/: Main.java  MainFast.java
src/main/kotlin/: Main.kt
src/main/mojo/: main-u.mojo  main.mojo
src/main/mypyc/: .gitignore  main.py  pyproject.toml
src/main/nim/: main.nim
src/main/v/: main.v  (+1 more)
(+3 files in other folders)
