[package]
name = "hello_rust"
version = "0.1.0"
authors = ["scorta <scorta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[profile.dev]
opt-level = 3

[[bin]]
name="main-replace"
path = "src/main-replace.rs"

[[bin]]
name="main-unsafe-rs"
path = "src/main-unsafe.rs"

[[bin]]
name="main-rust"
path = "src/main.rs"

[[bin]]
name="lifetime"
path = "src/lifetime.rs"

[[bin]]
name="lifetime-minus"
path = "src/lifetime-minus.rs"
