[package]
name = "hello_rust"
version = "0.1.0"
authors = ["scorta <scorta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
wasm-bindgen = "0.2.100"

[profile.dev]
opt-level = 3

[[bin]]
name="main-replace"
path = "src/main-replace.rs"

[[bin]]
name="main-unsafe-rs"
path = "src/main-unsafe.rs"

[[bin]]
name="main-rust"
path = "src/main.rs"


[lib]
crate-type = ["cdylib", "rlib"]
